feat: wip - reconcile spans when pasting inside an existing span
- Add PasteSpanReconciliation to decide which spans survive a paste that
  straddles a destination span: tuplets and beams die on both sides, ties
  and trills drop only the destination's, hairpins reconcile by type
- Confirm before a paste whose content would invalidate a first-second
  ending, on the same terms as Delete and Cut; declining cancels the paste
  and leaves the score, selection, and clipboard untouched
- Stop exempting the split boundary in Ending.isInvalidatedByInsertion — a
  barline inserted there lands before the split, leaving the sub-span with
  two rather than taking over as the split
- Merge abutting same-type hairpins in Line.addCrescendo/addDiminuendo so a
  pasted hairpin flush against an existing one draws as a single wedge
- Add a manual test matrix for the cases unit tests cannot see

refs #614

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SbqqGwBrSRVEb5cvwRZCB5